samples/_failures_safe/1761511788_dacf4c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1920ca75.c: In function ‘main’:
./samples/SAFE/__tmp_1920ca75.c:160:28: error: missing terminating " character
  160 |                     printf("Error
      |                            ^~~~~~
./samples/SAFE/__tmp_1920ca75.c:160:21: error: expected expression at end of input
  160 |                     printf("Error
      |                     ^~~~~~
./samples/SAFE/__tmp_1920ca75.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1920ca75.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1920ca75.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1920ca75.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1920ca75.c:160:21: error: expected declaration or statement at end of input
